<resources>
    <string name="app_name">Binar Food App</string>
    <string name="text_name">Hello Binarian</string>
    <string name="text_greeting">What do you want to eat today?</string>
    <string name="text_banner_title">Discount 30%</string>
    <string name="text_banner_description">Order food through the app and get discounts</string>
    <string name="text_category_1">Rice</string>
    <string name="text_category_2">Noodle</string>
    <string name="text_category_3">Snack</string>
    <string name="text_category_4">Drink</string>
    <string name="text_menu_heading">Food menu list</string>
    <string name="rp" translatable="false">Rp</string>
    <string name="text_location_title">Lokasi</string>
    <string name="text_location_detail" translatable="false">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_add_to_cart">Tambah ke keranjang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_home">Home</string>
    <string name="text_cart">Cart</string>
    <string name="text_profile">Profile</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_note">Note:</string>
    <string name="total_quantity" translatable="false">x%d</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_order_confirmation">Order Confirmation</string>
    <string name="text_checkout" translatable="false">Checkout</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method_title">Payment method</string>
    <string name="text_payment_method_cash" translatable="false">Cash</string>
    <string name="text_payment_method_ewallet" translatable="false">E-wallet</string>
    <string name="text_order_summary_title">Order Summary</string>
    <string name="text_menu_image_desc" translatable="false">menu image</string>
    <string name="text_proflie">Profile</string>
    <string name="text_name_label">Name</string>
    <string name="text_name_value" translatable="false">Doanta Aloycius Ginting</string>
    <string name="text_username_label" translatable="false">Username</string>
    <string name="text_username_value" translatable="false">doantaa</string>
    <string name="text_email_label" translatable="false">Email</string>
    <string name="text_email_value" translatable="false">doantaaloycius@gmail.com</string>
    <string name="text_whatsapp_label">Whatsapp Number</string>
    <string name="text_whatsapp_value" translatable="false">0811 7053 5262</string>
    <string name="text_keranjang">Keranjang</string>
    <string name="text_hint_email_empty">Email shouldn\'t be empty</string>
    <string name="text_hint_password_empty">Password field should\'t be empty</string>
    <string name="text_hint_email_format_invalid">Your email format is invalid</string>
    <string name="text_hint_name_empty">Name Field should not be empty</string>
    <string name="text_hint_password_length">Password cannot less than 8 character</string>
    <string name="text_hint_password_not_match">Password doesn\'t match</string>
    <string name="text_login" translatable="false">Login</string>
    <string name="text_helper_to_register">Not registered yet? Register here</string>
    <string name="text_register">Register</string>
    <string name="text_helper_to_login">Have an account? Login here</string>
    <string name="text_label_full_name">Full Name</string>
    <string name="text_label_email_address">Email Address</string>
    <string name="text_label_password">Password</string>
    <string name="text_label_confirm_password">Confirm Password</string>
    <string name="text_clickable_to_register">Register here</string>
    <string name="text_clickable_to_login">Login here</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_confirmation">Do you want to logout?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_back">Back</string>
    <string name="text_save">Save</string>
    <string name="text_edit" translatable="false">Edit</string>
    <string name="text_okay" translatable="false">OK</string>
    <string name="text_greeting_user_name">Hello %1$s</string>
    <string name="catatan" translatable="false">Catatan</string>
</resources>