<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.editprofile.EditProfileActivity">


    <ImageView
        android:id="@+id/iv_header_background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_header"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_header_background"
        app:layout_constraintStart_toStartOf="@id/iv_header_background"
        android:layout_marginStart="16dp"
        android:text="@string/text_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_header_background"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/text_proflie"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/iv_header_background"
        app:layout_constraintStart_toStartOf="@id/iv_header_background"
        app:layout_constraintTop_toTopOf="@id/iv_header_background"
        app:layout_constraintBottom_toBottomOf="@id/iv_header_background"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_form"
         />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_header_background"
        tools:ignore="ContentDescription" />


    <include
        android:id="@+id/layout_form"
        layout="@layout/layout_user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>